fix(business-hours): Add spacing between text & button

--- a/src/pages/settings/businessHours/BusinessHours.less
+++ b/src/pages/settings/businessHours/BusinessHours.less
@@ -1,3 +1,5 @@
+@import '~css/new/layout.less';
+
 :local {
     .businessHoursLabel {
         display: block;
@@ -33,5 +35,9 @@
         justify-content: center;
         font-weight: bold;
         cursor: pointer;
+    }
+
+    .businessHoursLabelWrapper {
+        margin-right: @layout-spacing-s;
     }
 }
